# vault

./: .gitignore  main.py  pyproject.toml  requirements.txt
api/: app.py
api/controllers/: file_controller.py  user_controller.py
api/routes/: file_routes.py  user_routes.py
cli/: cli.py  command.py  command_router.py
cli/commands/: delete.py  list.py  login.py  logout.py  ls.py  metadata.py  mkdir.py  publish.py  read.py  register.py  test.py  unpublish.py  upload.py  whoami.py
repositories/: file_repository.py  text.md  user_repository.py
services/: base_service.py  file_service.py  test_service.py  user_service.py
storage/: database.py  models.py
tasks/: thumbnail.py
utils/: celery.py  celeryconfig.py  helpers.py
